[package]
name = "easytcp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.42"
#openssl = { "0.10.42", features = ["vendored"] }
#openssl = { version = "0.10", features = ["vendored"] }
#aes = "0.8.1"


[features]
tcp_openssl = [dep:openssl]